fix module name

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for git-gutter.el
+Revision history for helm-open-github.el
 
 Revision 0.01 2013/04/27 syohex
    - Initial release
